[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/additional_ui/circle-3.png" type="Texture" id=1]
[ext_resource path="res://assets/additional_ui/circle-1.png" type="Texture" id=2]
[ext_resource path="res://scripts/UI/EventLogDisplayer.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/additional_ui/manuscript.png" type="Texture" id=5]



[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="EventLogDisplayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="EventDetailsController" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailsMenuController" type="Control" parent="EventDetailsController"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="ColorRect" parent="EventDetailsController/DetailsMenuController"]
margin_top = 97.0
margin_right = 249.0
margin_bottom = 482.0
color = Color( 0.32549, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="EventDetailsController/DetailsMenuController"]
margin_left = 9.0
margin_top = 107.0
margin_right = 240.0
margin_bottom = 471.0
color = Color( 0.439216, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="EventDetailsController/DetailsMenuController"]
margin_left = 23.0
margin_top = 122.0
margin_right = 234.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="EventDetailsController/DetailsMenuController/ScrollContainer"]

[node name="EventListContainer" type="VBoxContainer" parent="EventDetailsController/DetailsMenuController/ScrollContainer/MarginContainer"]
alignment = 1

[node name="CircleBackground" type="TextureRect" parent="EventDetailsController"]
margin_left = -19.0
margin_top = 374.0
margin_right = 108.0
margin_bottom = 507.0
rect_pivot_offset = Vector2( -230.904, -130.786 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventDetailsButton" type="Button" parent="EventDetailsController"]
margin_left = 0.881073
margin_top = 389.595
margin_right = 85.8811
margin_bottom = 478.595
toggle_mode = true
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventCounterController" type="Control" parent="EventDetailsController"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CounterCircleFrame" type="TextureRect" parent="EventDetailsController/EventCounterController"]
margin_left = 76.0
margin_top = 444.0
margin_right = 111.0
margin_bottom = 482.0
rect_pivot_offset = Vector2( -230.904, -130.786 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CounterCircleBackground" type="TextureRect" parent="EventDetailsController/EventCounterController"]
margin_left = 79.3568
margin_top = 448.06
margin_right = 107.357
margin_bottom = 478.06
rect_pivot_offset = Vector2( -230.904, -130.786 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CounterLabel" type="Label" parent="EventDetailsController/EventCounterController"]
margin_left = 88.7027
margin_top = 455.405
margin_right = 98.7027
margin_bottom = 474.405
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="EventDetailsController/EventDetailsButton" to="." method="_on_EventDetailsButton_toggled"]
